<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivPortada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/portada"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="H,16:9"/>

    <TextView
        android:id="@+id/tvSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_opcion"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ivPortada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_sonido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_reproducir_sonido"
        app:backgroundTint="@color/azul"
        app:layout_constraintTop_toBottomOf="@id/tvSeleccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_reproducir_audio"
        app:backgroundTint="@color/azul"
        app:layout_constraintTop_toBottomOf="@id/btn_sonido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_reproducir_video"
        app:backgroundTint="@color/verde"
        app:layout_constraintTop_toBottomOf="@id/btn_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_salir"
        app:backgroundTint="@color/rojo"
        app:layout_constraintTop_toBottomOf="@id/btn_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>